Multi-stage dockerfile

--- a/MyApp/Dockerfile
+++ b/MyApp/Dockerfile
@@ -1,7 +1,18 @@
-FROM microsoft/dotnet:2.1-sdk
-WORKDIR /src
-COPY . .
-RUN dotnet publish MyApp/MyApp.csproj -c Release -o /app
+FROM microsoft/dotnet:2.1-runtime AS base
 WORKDIR /app
-COPY /app .
+
+FROM microsoft/dotnet:2.1-sdk AS build
+WORKDIR /src
+COPY MyApp/MyApp.csproj MyApp/
+RUN dotnet restore MyApp/MyApp.csproj
+COPY . .
+WORKDIR /src/MyApp
+RUN dotnet build MyApp.csproj -c Release -o /app
+
+FROM build AS publish
+RUN dotnet publish MyApp.csproj -c Release -o /app
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app .
 ENTRYPOINT ["dotnet", "MyApp.dll"]
